# longevity-hack

./: .gitignore  README.md  backend.py  main.py  pyproject.toml  test.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: CompassIcon.jsx  HRVDeviationChart.jsx  LiveWaves.jsx
frontend/src/hooks/: useBaselineMonitor.js  useConcentrationNotifications.js  useMuseStream.js
frontend/src/utils/: mindState.js
